// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dropdown /> should match snapshot 1`] = `
.c4 {
  position: relative;
  padding: 0;
  max-width: 0;
  width: auto;
  height: 0;
  font-weight: normal;
  visibility: hidden;
  -webkit-transition-property: max-width,padding;
  transition-property: max-width,padding;
  font-size: 12px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  -webkit-transition-duration: 100ms;
  transition-duration: 100ms;
}

.c5 {
  padding-left: 4px;
  padding-right: 4px;
}

.c3 {
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  pointer-events: none;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 16px;
  left: 16px;
  font-size: 14px;
  font-weight: 400;
  color: #6B6B78;
  -webkit-transition-property: -webkit-transform,font-size;
  -webkit-transition-property: transform,font-size;
  transition-property: transform,font-size;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
}

.c0 {
  position: relative;
  display: inline-block;
  vertical-align: top;
  width: 320px;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  margin: 0;
  height: 52px;
  width: 100%;
  padding: 16px 16px 16px 16px;
  background-color: #FFFFFF;
  border-radius: 8px;
  border-width: 1px;
  border-style: solid;
  border-color: #D7D7E0;
}

.c1:hover {
  border-color: #231B22;
}

.c2 {
  width: 100%;
  padding: 0;
  background-color: transparent;
  border: none;
  font-family: Rubik;
  font-size: 14px;
  line-height: 20px;
  cursor: pointer;
}

.c2:focus ~ legend {
  max-width: 1000px;
  -webkit-transition-property: max-width;
  transition-property: max-width;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
}

.c2:focus ~ label {
  -webkit-transform: translateY(-24px);
  -ms-transform: translateY(-24px);
  transform: translateY(-24px);
  -webkit-transition-property: -webkit-transform,font-size,color;
  -webkit-transition-property: transform,font-size,color;
  transition-property: transform,font-size,color;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  font-size: 12px;
  color: #231B22;
  margin-left: 4px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  padding-right: 16px;
  border: none;
  outline: none;
  background-color: transparent;
  cursor: pointer;
}

.c7 {
  fill: #6B6B78;
  -webkit-transform: rotate(0);
  -ms-transform: rotate(0);
  transform: rotate(0);
}

<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-0-label"
    class="c0"
    role="combobox"
  >
    <fieldset
      class="c1"
    >
      <input
        aria-autocomplete="list"
        aria-labelledby="downshift-0-label"
        autocomplete="off"
        class="c2"
        id="downshift-0-input"
        readonly=""
        value=""
      />
      <label
        class="c3"
        data-testid="label"
      >
        Find an activity to love
      </label>
      <legend
        class="c4"
      >
        <span
          class="c5"
        >
          Find an activity to love
        </span>
      </legend>
      <button
        aria-haspopup="true"
        aria-label="open menu"
        class="c6"
        data-toggle="true"
        role="button"
        type="button"
      >
        <svg
          class="c7"
          height="20"
          width="20"
        />
      </button>
    </fieldset>
  </div>
</div>
`;

exports[`<Dropdown /> should match snapshot when disabled 1`] = `
.c4 {
  position: relative;
  padding: 0;
  max-width: 0;
  width: auto;
  height: 0;
  font-weight: normal;
  visibility: hidden;
  -webkit-transition-property: max-width,padding;
  transition-property: max-width,padding;
  font-size: 12px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  -webkit-transition-duration: 100ms;
  transition-duration: 100ms;
}

.c5 {
  padding-left: 4px;
  padding-right: 4px;
}

.c3 {
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  pointer-events: none;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 16px;
  left: 16px;
  font-size: 14px;
  font-weight: 400;
  color: #6B6B78;
  -webkit-transition-property: -webkit-transform,font-size;
  -webkit-transition-property: transform,font-size;
  transition-property: transform,font-size;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  color: #D7D7E0;
}

.c0 {
  position: relative;
  display: inline-block;
  vertical-align: top;
  width: 320px;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  margin: 0;
  height: 52px;
  width: 100%;
  padding: 16px 16px 16px 16px;
  background-color: #FFFFFF;
  border-radius: 8px;
  border-width: 1px;
  border-style: solid;
  border-color: #D7D7E0;
  border-color: #F5F5FA;
}

.c2 {
  width: 100%;
  padding: 0;
  background-color: transparent;
  border: none;
  font-family: Rubik;
  font-size: 14px;
  line-height: 20px;
  cursor: not-allowed;
}

.c2:focus ~ legend {
  max-width: 1000px;
  -webkit-transition-property: max-width;
  transition-property: max-width;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
}

.c2:focus ~ label {
  -webkit-transform: translateY(-24px);
  -ms-transform: translateY(-24px);
  transform: translateY(-24px);
  -webkit-transition-property: -webkit-transform,font-size,color;
  -webkit-transition-property: transform,font-size,color;
  transition-property: transform,font-size,color;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  font-size: 12px;
  color: #231B22;
  margin-left: 4px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  padding-right: 16px;
  border: none;
  outline: none;
  background-color: transparent;
  cursor: not-allowed;
}

.c7 {
  fill: #6B6B78;
  fill: #D7D7E0;
  -webkit-transform: rotate(0);
  -ms-transform: rotate(0);
  transform: rotate(0);
}

<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-1-label"
    class="c0"
    role="combobox"
  >
    <fieldset
      class="c1"
      disabled=""
    >
      <input
        aria-autocomplete="list"
        aria-labelledby="downshift-1-label"
        autocomplete="off"
        class="c2"
        disabled=""
        id="downshift-1-input"
        readonly=""
        value=""
      />
      <label
        class="c3"
        data-testid="label"
        disabled=""
      >
        Find an activity to love
      </label>
      <legend
        class="c4"
      >
        <span
          class="c5"
        >
          Find an activity to love
        </span>
      </legend>
      <button
        aria-haspopup="true"
        aria-label="open menu"
        class="c6"
        data-toggle="true"
        disabled=""
        role="button"
        type="button"
      >
        <svg
          class="c7"
          disabled=""
          height="20"
          width="20"
        />
      </button>
    </fieldset>
  </div>
</div>
`;

exports[`<Dropdown /> should match snapshot when full 1`] = `
.c4 {
  position: relative;
  padding: 0;
  max-width: 0;
  width: auto;
  height: 0;
  font-weight: normal;
  visibility: hidden;
  -webkit-transition-property: max-width,padding;
  transition-property: max-width,padding;
  font-size: 12px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  -webkit-transition-duration: 100ms;
  transition-duration: 100ms;
}

.c5 {
  padding-left: 4px;
  padding-right: 4px;
}

.c3 {
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  pointer-events: none;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 16px;
  left: 16px;
  font-size: 14px;
  font-weight: 400;
  color: #6B6B78;
  -webkit-transition-property: -webkit-transform,font-size;
  -webkit-transition-property: transform,font-size;
  transition-property: transform,font-size;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
}

.c0 {
  position: relative;
  display: inline-block;
  vertical-align: top;
  width: 100%;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  margin: 0;
  height: 52px;
  width: 100%;
  padding: 16px 16px 16px 16px;
  background-color: #FFFFFF;
  border-radius: 8px;
  border-width: 1px;
  border-style: solid;
  border-color: #D7D7E0;
}

.c1:hover {
  border-color: #231B22;
}

.c2 {
  width: 100%;
  padding: 0;
  background-color: transparent;
  border: none;
  font-family: Rubik;
  font-size: 14px;
  line-height: 20px;
  cursor: pointer;
}

.c2:focus ~ legend {
  max-width: 1000px;
  -webkit-transition-property: max-width;
  transition-property: max-width;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
}

.c2:focus ~ label {
  -webkit-transform: translateY(-24px);
  -ms-transform: translateY(-24px);
  transform: translateY(-24px);
  -webkit-transition-property: -webkit-transform,font-size,color;
  -webkit-transition-property: transform,font-size,color;
  transition-property: transform,font-size,color;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  font-size: 12px;
  color: #231B22;
  margin-left: 4px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  padding-right: 16px;
  border: none;
  outline: none;
  background-color: transparent;
  cursor: pointer;
}

.c7 {
  fill: #6B6B78;
  -webkit-transform: rotate(0);
  -ms-transform: rotate(0);
  transform: rotate(0);
}

<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-2-label"
    class="c0"
    role="combobox"
  >
    <fieldset
      class="c1"
    >
      <input
        aria-autocomplete="list"
        aria-labelledby="downshift-2-label"
        autocomplete="off"
        class="c2"
        id="downshift-2-input"
        readonly=""
        value=""
      />
      <label
        class="c3"
        data-testid="label"
      >
        Find an activity to love
      </label>
      <legend
        class="c4"
      >
        <span
          class="c5"
        >
          Find an activity to love
        </span>
      </legend>
      <button
        aria-haspopup="true"
        aria-label="open menu"
        class="c6"
        data-toggle="true"
        role="button"
        type="button"
      >
        <svg
          class="c7"
          height="20"
          width="20"
        />
      </button>
    </fieldset>
  </div>
</div>
`;

exports[`<Dropdown /> should match snapshot when has a selected value 1`] = `
.c4 {
  position: relative;
  padding: 0;
  max-width: 0;
  width: auto;
  height: 0;
  font-weight: normal;
  visibility: hidden;
  -webkit-transition-property: max-width,padding;
  transition-property: max-width,padding;
  font-size: 12px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  -webkit-transition-duration: 100ms;
  transition-duration: 100ms;
}

.c5 {
  padding-left: 4px;
  padding-right: 4px;
}

.c3 {
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  pointer-events: none;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 16px;
  left: 16px;
  font-size: 14px;
  font-weight: 400;
  color: #6B6B78;
  -webkit-transition-property: -webkit-transform,font-size;
  -webkit-transition-property: transform,font-size;
  transition-property: transform,font-size;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  color: #D7D7E0;
}

.c0 {
  position: relative;
  display: inline-block;
  vertical-align: top;
  width: 320px;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  margin: 0;
  height: 52px;
  width: 100%;
  padding: 16px 16px 16px 16px;
  background-color: #FFFFFF;
  border-radius: 8px;
  border-width: 1px;
  border-style: solid;
  border-color: #D7D7E0;
  border-color: #F5F5FA;
  border-color: #231B22;
}

.c2 {
  width: 100%;
  padding: 0;
  background-color: transparent;
  border: none;
  font-family: Rubik;
  font-size: 14px;
  line-height: 20px;
  cursor: not-allowed;
}

.c2:focus ~ legend {
  max-width: 1000px;
  -webkit-transition-property: max-width;
  transition-property: max-width;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
}

.c2:focus ~ label {
  -webkit-transform: translateY(-24px);
  -ms-transform: translateY(-24px);
  transform: translateY(-24px);
  -webkit-transition-property: -webkit-transform,font-size,color;
  -webkit-transition-property: transform,font-size,color;
  transition-property: transform,font-size,color;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  font-size: 12px;
  color: #231B22;
  margin-left: 4px;
}

.c2 ~ legend {
  max-width: 1000px;
}

.c2 ~ label {
  -webkit-transform: translateY(-24px);
  -ms-transform: translateY(-24px);
  transform: translateY(-24px);
  -webkit-transition-property: -webkit-transform,font-size,color;
  -webkit-transition-property: transform,font-size,color;
  transition-property: transform,font-size,color;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  font-size: 12px;
  color: #231B22;
  margin-left: 4px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  padding-right: 16px;
  border: none;
  outline: none;
  background-color: transparent;
  cursor: not-allowed;
}

.c7 {
  fill: #6B6B78;
  fill: #D7D7E0;
  fill: #231B22;
  -webkit-transform: rotate(0);
  -ms-transform: rotate(0);
  transform: rotate(0);
}

<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-3-label"
    class="c0"
    role="combobox"
  >
    <fieldset
      class="c1"
      disabled=""
    >
      <input
        aria-autocomplete="list"
        aria-labelledby="downshift-3-label"
        autocomplete="off"
        class="c2"
        disabled=""
        id="downshift-3-input"
        readonly=""
        value="Swimming"
      />
      <label
        class="c3"
        data-testid="label"
        disabled=""
      >
        Find an activity to love
      </label>
      <legend
        class="c4"
      >
        <span
          class="c5"
        >
          Find an activity to love
        </span>
      </legend>
      <button
        aria-haspopup="true"
        aria-label="open menu"
        class="c6"
        data-toggle="true"
        disabled=""
        role="button"
        type="button"
      >
        <svg
          class="c7"
          disabled=""
          height="20"
          width="20"
        />
      </button>
    </fieldset>
  </div>
</div>
`;

exports[`<Dropdown /> should match snapshot with error 1`] = `
.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: 4px;
  color: #FF874C;
}

.c9 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  font-family: Rubik;
  color: #231B22;
  color: currentColor;
  font-size: 12px;
}

.c4 {
  position: relative;
  padding: 0;
  max-width: 0;
  width: auto;
  height: 0;
  font-weight: normal;
  visibility: hidden;
  -webkit-transition-property: max-width,padding;
  transition-property: max-width,padding;
  font-size: 12px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  -webkit-transition-duration: 100ms;
  transition-duration: 100ms;
}

.c5 {
  padding-left: 4px;
  padding-right: 4px;
}

.c3 {
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  pointer-events: none;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 16px;
  left: 16px;
  font-size: 14px;
  font-weight: 400;
  color: #6B6B78;
  -webkit-transition-property: -webkit-transform,font-size;
  -webkit-transition-property: transform,font-size;
  transition-property: transform,font-size;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  color: #FF874C;
}

.c0 {
  position: relative;
  display: inline-block;
  vertical-align: top;
  width: 320px;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  margin: 0;
  height: 52px;
  width: 100%;
  padding: 16px 16px 16px 16px;
  background-color: #FFFFFF;
  border-radius: 8px;
  border-width: 1px;
  border-style: solid;
  border-color: #FF874C;
  border-color: #231B22;
}

.c1:hover {
  border-color: #231B22;
}

.c2 {
  width: 100%;
  padding: 0;
  background-color: transparent;
  border: none;
  font-family: Rubik;
  font-size: 14px;
  line-height: 20px;
  cursor: pointer;
}

.c2:focus ~ legend {
  max-width: 1000px;
  -webkit-transition-property: max-width;
  transition-property: max-width;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
}

.c2:focus ~ label {
  -webkit-transform: translateY(-24px);
  -ms-transform: translateY(-24px);
  transform: translateY(-24px);
  -webkit-transition-property: -webkit-transform,font-size,color;
  -webkit-transition-property: transform,font-size,color;
  transition-property: transform,font-size,color;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  font-size: 12px;
  color: #231B22;
  margin-left: 4px;
}

.c2 ~ legend {
  max-width: 1000px;
}

.c2 ~ label {
  -webkit-transform: translateY(-24px);
  -ms-transform: translateY(-24px);
  transform: translateY(-24px);
  -webkit-transition-property: -webkit-transform,font-size,color;
  -webkit-transition-property: transform,font-size,color;
  transition-property: transform,font-size,color;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  font-size: 12px;
  color: #231B22;
  margin-left: 4px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  padding-right: 16px;
  border: none;
  outline: none;
  background-color: transparent;
  cursor: pointer;
}

.c7 {
  fill: #6B6B78;
  fill: #231B22;
  -webkit-transform: rotate(0);
  -ms-transform: rotate(0);
  transform: rotate(0);
}

<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-4-label"
    class="c0"
    role="combobox"
  >
    <fieldset
      class="c1"
    >
      <input
        aria-autocomplete="list"
        aria-labelledby="downshift-4-label"
        autocomplete="off"
        class="c2"
        id="downshift-4-input"
        readonly=""
        value="Swimming"
      />
      <label
        class="c3"
        data-testid="label"
      >
        Find an activity to love
      </label>
      <legend
        class="c4"
      >
        <span
          class="c5"
        >
          Find an activity to love
        </span>
      </legend>
      <button
        aria-haspopup="true"
        aria-label="open menu"
        class="c6"
        data-toggle="true"
        role="button"
        type="button"
      >
        <svg
          class="c7"
          height="20"
          width="20"
        />
      </button>
    </fieldset>
    <div
      class="c8"
    >
      <span
        class="c9"
      >
        Please, select one activity
      </span>
    </div>
  </div>
</div>
`;
